[package]
name = "ming-tools"
version = "0.1.0"
authors = ['ming <18120580001@163.com>']
edition = "2021"
description = "ming  private tools "
documentation = ""
homepage = "https://serde.rs/"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
