[package]
name = "rsm"
version = "0.1.1"
authors = ['ming <18120580001@163.com>']
edition = "2021"
description = "ming  private tools "
documentation = "https://github.com/xujiuming/ming-tools-rs"
homepage = "https://github.com/xujiuming/ming-tools-rs"
repository = "https://github.com/xujiuming/ming-tools-rs"
license = "MIT"
#license-file = "LICENSE"
readme = "README.md"
publish = ["ming-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
